[package]
name = "upkr"
version = "0.2.2"
edition = "2021"

[profile.release]
strip = "debuginfo"

[features]
terminal = ["crossterm", "pbr"]

[dependencies]
cdivsufsort = "2"
lexopt = "0.2.1"
anyhow = "1"
thiserror = "1.0.36"
pbr = { version = "1", optional = true }
crossterm = { version = "0.25.0", default-features = false, optional = true }
