[package]
name = "upkr"
version = "0.2.3"
edition = "2024"
description = "Simple LZ packer with relatively small unpackers"
license = "Unlicense"
reepository = "https://github.com/exoticorn/upkr"

[profile.release]
strip = "debuginfo"

[features]
terminal = ["crossterm", "pbr"]

[dependencies]
cdivsufsort = "2"
lexopt = "0.3.1"
anyhow = "1"
thiserror = "2.0.12"
pbr = { version = "1", optional = true }
crossterm = { version = "0.29.0", default-features = false, optional = true }
